realtime password validation

--- a/ProjectExam/ProjectExam/Views/Account/Register.cshtml
+++ b/ProjectExam/ProjectExam/Views/Account/Register.cshtml
@@ -11,26 +11,44 @@
     <h4>Create a new account.</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
+
     <div class="form-group">
         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
+        <div class="col-md-4">
             @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
         </div>
     </div>
+
     <div class="form-group">
         @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
+        <div class="col-md-4">
             @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
         </div>
+        <div class="col-md-4">
+            <div class="aro-pswd_info">
+                <div id="pswd_info">
+                    <h4>Password requirements</h4>
+                    <ul>
+                        <li id="letter" class="isInValid">At least <strong>one letter</strong></li>
+                        <li id="capital" class="isInValid">At least <strong>one capital letter</strong></li>
+                        <li id="number" class="isInValid">At least <strong>one number</strong></li>
+                        <li id="length" class="isInValid">Be at least <strong>6 characters</strong></li>
+                        <li id="space" class="isInValid">Be at least <strong>one non letter or digit character</strong></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
+
     <div class="form-group">
         @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
+        <div class="col-md-4">
             @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
         </div>
     </div>
+
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
+        <div class="col-md-offset-2 col-md-4">
             <input type="submit" class="btn btn-default" value="Register" />
         </div>
     </div>
