show all question and answer, can't be answered and submitted

--- a/ProjectExam/ProjectExam/Views/Shared/_LoginPartial.cshtml
+++ b/ProjectExam/ProjectExam/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,10 @@
 ﻿@using Microsoft.AspNet.Identity
 @if (Request.IsAuthenticated)
 {
+    <ul class="nav navbar-nav">
+        <li>@Html.ActionLink("Quiz", "Publish", "Quiz")</li>
+    </ul>
+
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
     {
     @Html.AntiForgeryToken()
