--- a/ProjectExam/ProjectExam/Views/BeginExam/RandomTest.cshtml
+++ b/ProjectExam/ProjectExam/Views/BeginExam/RandomTest.cshtml
@@ -4,8 +4,7 @@
     ViewBag.Title = "RandomTest";
 }
 
-
-<h4><em>Custom Test</em></h4>
+<h4><em>10 Random Questions</em></h4>
 
 <h3>Question @ViewBag.count: @Model.QuestionDescription? </h3> <br /><br />
 
