--- a/ProjectExam/ProjectExam/Views/Exams/Manage.cshtml
+++ b/ProjectExam/ProjectExam/Views/Exams/Manage.cshtml
@@ -6,7 +6,8 @@
 
 <h2>Manage Exams</h2>
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "Create") | 
+    @Html.ActionLink("Manage Questions", "Index", "Questions")
 </p>
 <table class="table">
     <tr>
