--- a/ProjectExam/ProjectExam/Views/Questions/Index.cshtml
+++ b/ProjectExam/ProjectExam/Views/Questions/Index.cshtml
@@ -42,5 +42,5 @@
 </table>
 
 <div>
-    @Html.ActionLink("Back to Exams", "Index", "Exams")
+    @Html.ActionLink("Back to Exams", "Manage", "Exams")
 </div>
