--- a/ProjectExam/ProjectExam/Views/Shared/_LoginPartial.cshtml
+++ b/ProjectExam/ProjectExam/Views/Shared/_LoginPartial.cshtml
@@ -3,6 +3,7 @@
 {
     <ul class="nav navbar-nav">
         <li>@Html.ActionLink("Exam", "Index", "Exams")</li>
+        <li>@Html.ActionLink("Leaderboard", "Index", "LeaderBoards")</li>
     </ul>
 
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
